src/parser/NolifeParser.java
/* Generated By:JavaCC: Do not edit this line. NolifeParser.java */
package parser;
import ast.*;
import visitor.*;

public class NolifeParser implements NolifeParserConstants {
  private static ASTNodeFactory factory = new ASTNodeFactory();

  static final public ASTNode program() throws ParseException {
  ASTNode programNode = factory.makeASTNode("ProgramNode");
  Token programName;
  ASTNode declarationsNode = null;
  ASTNode compoundStatement = null;
    jj_consume_token(O_PROGRAM);
    programName = jj_consume_token(O_IDENTIFIER);
    jj_consume_token(O_SEMICOLON);
    programNode.addLabel(programName.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_VAR:
      declarationsNode = decls();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    programNode.addChild(declarationsNode);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_FUNCTION:
    case O_PROCEDURE:
      subprogram_decls();
      break;
    default:
      jj_la1[1] = jj_gen;
      ;
    }
    compoundStatement = compound_stmt();
    programNode.addChild(compoundStatement);
    {if (true) return programNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode decls() throws ParseException {
  ASTNode declarationsNode = null;
    jj_consume_token(O_VAR);
    declarationsNode = decl_list();
    {if (true) return declarationsNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode decl_list() throws ParseException {
  ASTNode variableDeclarationNode = null;
  ASTNode typeNode = null;
  ASTNode declarationsNode = factory.makeASTNode("DeclNode");
    label_1:
    while (true) {
      variableDeclarationNode = identifier_list();
      jj_consume_token(O_COLON);
      typeNode = type();
      jj_consume_token(O_SEMICOLON);
      variableDeclarationNode.addChild(typeNode);
      //System.out.println(declarationsNode.toString());
      declarationsNode.addChild(variableDeclarationNode);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_IDENTIFIER:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_1;
      }
    }
    {if (true) return declarationsNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode identifier_list() throws ParseException {
  Token variableName;
  ASTNode variableNode = null;
  ASTNode variableDeclarationNode = factory.makeASTNode("VarDeclNode");
    variableName = jj_consume_token(O_IDENTIFIER);
    variableNode = factory.makeASTNode("IdDeclNode").addLabel(variableName.image);
    variableDeclarationNode.addChild(variableNode);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_COMMA:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(O_COMMA);
      variableName = jj_consume_token(O_IDENTIFIER);
      variableNode = factory.makeASTNode("IdDeclNode").addLabel(variableName.image);
      variableDeclarationNode.addChild(variableNode);
    }
    {if (true) return variableDeclarationNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode type() throws ParseException {
  ASTNode typeNode = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_CHARACTER:
    case O_FLOAT:
    case O_INTEGER:
      typeNode = standard_type();
      break;
    case O_ARRAY:
      typeNode = array_type();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return typeNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode standard_type() throws ParseException {
  ASTNode typeNode = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_INTEGER:
      jj_consume_token(O_INTEGER);
      typeNode = factory.makeASTNode("IntTypeNode").addLabel("INTEGER");
      break;
    case O_FLOAT:
      jj_consume_token(O_FLOAT);
      typeNode = factory.makeASTNode("FloatTypeNode").addLabel("FLOAT");
      break;
    case O_CHARACTER:
      jj_consume_token(O_CHARACTER);
      typeNode = factory.makeASTNode("CharTypeNode").addLabel("CHARACTER");
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return typeNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode array_type() throws ParseException {
  ASTNode arrayNode = null;
  ASTNode typeNode = null;
    jj_consume_token(O_ARRAY);
    jj_consume_token(O_LBRACKET);
    arrayNode = dim();
    jj_consume_token(O_RBRACKET);
    jj_consume_token(O_OF);
    typeNode = standard_type();
    arrayNode.addChild(typeNode);
    {if (true) return arrayNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode dim() throws ParseException {
  ASTNode arrayNode = factory.makeASTNode("ArrayTypeNode");
  Token minValue;
  Token maxValue;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_INT:
      minValue = jj_consume_token(O_INT);
      jj_consume_token(O_DOT);
      jj_consume_token(O_DOT);
      maxValue = jj_consume_token(O_INT);
      break;
    case O_CHAR:
      minValue = jj_consume_token(O_CHAR);
      jj_consume_token(O_DOT);
      jj_consume_token(O_DOT);
      maxValue = jj_consume_token(O_CHAR);
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    ASTNode minArrayNode = factory.makeASTNode("MinArrayNode").addLabel(minValue.image);
    ASTNode maxArrayNode = factory.makeASTNode("MaxArrayNode").addLabel(maxValue.image);
    arrayNode.addChild(minArrayNode).addChild(maxArrayNode);
    {if (true) return arrayNode;}
    throw new Error("Missing return statement in function");
  }

  static final public void subprogram_decls() throws ParseException {
    label_3:
    while (true) {
      subprogram_decl();
      jj_consume_token(O_SEMICOLON);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_FUNCTION:
      case O_PROCEDURE:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_3;
      }
    }
  }

  static final public void subprogram_decl() throws ParseException {
    subprogram_head();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_VAR:
      decls();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
    compound_stmt();
  }

  static final public void subprogram_head() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_FUNCTION:
      jj_consume_token(O_FUNCTION);
      jj_consume_token(O_IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_LPAREN:
        arguments();
        break;
      default:
        jj_la1[9] = jj_gen;
        ;
      }
      jj_consume_token(O_COLON);
      standard_type();
      jj_consume_token(O_SEMICOLON);
      break;
    case O_PROCEDURE:
      jj_consume_token(O_PROCEDURE);
      jj_consume_token(O_IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_LPAREN:
        arguments();
        break;
      default:
        jj_la1[10] = jj_gen;
        ;
      }
      jj_consume_token(O_SEMICOLON);
      break;
    default:
      jj_la1[11] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void arguments() throws ParseException {
    jj_consume_token(O_LPAREN);
    parameter_list();
    jj_consume_token(O_RPAREN);
  }

  static final public void parameter_list() throws ParseException {
    identifier_list();
    jj_consume_token(O_COLON);
    type();
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_SEMICOLON:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_4;
      }
      jj_consume_token(O_SEMICOLON);
      identifier_list();
      jj_consume_token(O_COLON);
      type();
    }
  }

  static final public ASTNode compound_stmt() throws ParseException {
  ASTNode compoundStatement = null;
    jj_consume_token(O_BEGIN);
    compoundStatement = stmt_list();
    jj_consume_token(O_END);
    {if (true) return compoundStatement;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode stmt_list() throws ParseException {
  ASTNode compoundStatement = factory.makeASTNode("CmpStmtNode");
  ASTNode statement = null;
    statement = stmt();
    compoundStatement.addChild(statement);
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_SEMICOLON:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_5;
      }
      jj_consume_token(O_SEMICOLON);
      statement = stmt();
      compoundStatement.addChild(statement);
    }
    {if (true) return compoundStatement;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode stmt() throws ParseException {
  ASTNode statement = null;
    if (jj_2_1(2)) {
      statement = assignment();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_IF:
        if_stmt();
        break;
      case O_WHILE:
        while_stmt();
        break;
      case O_IDENTIFIER:
        procedure_invocation();
        break;
      case O_READ:
      case O_WRITE:
        i_o_stmt();
        break;
      case O_BEGIN:
        compound_stmt();
        break;
      case O_RETURN:
        return_stmt();
        break;
      case O_CASE:
        case_stmt();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode assignment() throws ParseException {
  ASTNode statement = factory.makeASTNode("StmtNode");
  ASTNode assignment = factory.makeASTNode("AssignmentNode");
  ASTNode idDefinitionNode = null;
  ASTNode expressionNode = null;
    idDefinitionNode = variable();
    jj_consume_token(O_ASSIGN);
    expressionNode = expr();
    assignment.addChild(idDefinitionNode).addChild(expressionNode);
    statement.addChild(assignment);
    {if (true) return statement;}
    throw new Error("Missing return statement in function");
  }

  static final public void if_stmt() throws ParseException {
    jj_consume_token(O_IF);
    expr();
    jj_consume_token(O_THEN);
    stmt();
    if (jj_2_2(2147483647)) {
      jj_consume_token(O_ELSE);
      stmt();
    } else {
      ;
    }
  }

  static final public void while_stmt() throws ParseException {
    jj_consume_token(O_WHILE);
    expr();
    jj_consume_token(O_DO);
    stmt();
  }

  static final public void procedure_invocation() throws ParseException {
    jj_consume_token(O_IDENTIFIER);
    jj_consume_token(O_LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_NOT:
    case O_LPAREN:
    case O_CHAR:
    case O_IDENTIFIER:
    case O_FLOATCON:
    case O_INT:
      expr_list();
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
    jj_consume_token(O_RPAREN);
  }

  static final public void i_o_stmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_READ:
      jj_consume_token(O_READ);
      jj_consume_token(O_LPAREN);
      variable();
      jj_consume_token(O_RPAREN);
      break;
    case O_WRITE:
      jj_consume_token(O_WRITE);
      jj_consume_token(O_LPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_NOT:
      case O_LPAREN:
      case O_CHAR:
      case O_IDENTIFIER:
      case O_FLOATCON:
      case O_INT:
        expr();
        break;
      case O_STRING:
        string();
        break;
      default:
        jj_la1[16] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(O_RPAREN);
      break;
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void return_stmt() throws ParseException {
    jj_consume_token(O_RETURN);
    expr();
  }

  static final public void case_stmt() throws ParseException {
    jj_consume_token(O_CASE);
    expr();
    jj_consume_token(O_OF);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_FLOATCON:
    case O_INT:
      cases();
      break;
    default:
      jj_la1[18] = jj_gen;
      ;
    }
    jj_consume_token(O_END);
  }

  static final public void cases() throws ParseException {
    case_element();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_SEMICOLON:
        ;
        break;
      default:
        jj_la1[19] = jj_gen;
        break label_6;
      }
      jj_consume_token(O_SEMICOLON);
      case_element();
    }
  }

  static final public void case_element() throws ParseException {
    case_labels();
    jj_consume_token(O_COLON);
    stmt();
  }

  static final public void case_labels() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_INT:
      jj_consume_token(O_INT);
      break;
    case O_FLOATCON:
      jj_consume_token(O_FLOATCON);
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_COMMA:
        ;
        break;
      default:
        jj_la1[21] = jj_gen;
        break label_7;
      }
      jj_consume_token(O_COMMA);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_INT:
        jj_consume_token(O_INT);
        break;
      case O_FLOATCON:
        jj_consume_token(O_FLOATCON);
        break;
      default:
        jj_la1[22] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  static final public void expr_list() throws ParseException {
    expr();
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_COMMA:
        ;
        break;
      default:
        jj_la1[23] = jj_gen;
        break label_8;
      }
      jj_consume_token(O_COMMA);
      expr();
    }
  }

  static final public ASTNode expr() throws ParseException {
  ASTNode expressionNode = factory.makeASTNode("ExpNode");
  ASTNode factorNode = null;
    factorNode = term1();
    exprPrime();
    expressionNode.addChild(factorNode);
    {if (true) return expressionNode;}
    throw new Error("Missing return statement in function");
  }

  static final public void exprPrime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_OR:
      jj_consume_token(O_OR);
      term1();
      exprPrime();
      break;
    case O_AND:
      jj_consume_token(O_AND);
      term1();
      exprPrime();
      break;
    default:
      jj_la1[24] = jj_gen;

    }
  }

  static final public ASTNode term1() throws ParseException {
  ASTNode factorNode = null;
    factorNode = term2();
    term1Prime();
    {if (true) return factorNode;}
    throw new Error("Missing return statement in function");
  }

  static final public void term1Prime() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_LT:
      jj_consume_token(O_LT);
      term2();
      term1Prime();
      break;
    case O_LE:
      jj_consume_token(O_LE);
      term2();
      term1Prime();
      break;
    case O_GT:
      jj_consume_token(O_GT);
      term2();
      term1Prime();
      break;
    case O_GE:
      jj_consume_token(O_GE);
      term2();
      term1Prime();
      break;
    case O_NE:
      jj_consume_token(O_NE);
      term2();
      term1Prime();
      break;
    case O_EQ:
      jj_consume_token(O_EQ);
      term2();
      term1Prime();
      break;
    default:
      jj_la1[25] = jj_gen;

    }
  }

  static final public ASTNode term2() throws ParseException {
  ASTNode factorNode = null;
    factorNode = term3();
    factorNode = term2Prime(factorNode);
    {if (true) return factorNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode term2Prime(ASTNode leftFactorNode) throws ParseException {
  ASTNode rightFactorNode = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_PLUS:
      jj_consume_token(O_PLUS);
      rightFactorNode = term3();
      ASTNode addNode = factory.makeASTNode("AddNode");
      addNode.addChild(leftFactorNode).addChild(rightFactorNode);
      leftFactorNode = term2Prime(addNode);
      break;
    case O_MINUS:
      jj_consume_token(O_MINUS);
      rightFactorNode = term3();
      ASTNode subNode = factory.makeASTNode("SubNode");
      subNode.addChild(leftFactorNode).addChild(rightFactorNode);
      leftFactorNode = term2Prime(subNode);
      break;
    default:
      jj_la1[26] = jj_gen;

    }
    {if (true) return leftFactorNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode term3() throws ParseException {
  ASTNode factorNode = null;
    factorNode = factor();
    factorNode = term3Prime(factorNode);
    {if (true) return factorNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode term3Prime(ASTNode leftFactorNode) throws ParseException {
  ASTNode rightFactorNode = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_TIMES:
      jj_consume_token(O_TIMES);
      rightFactorNode = factor();
      ASTNode multiplicationNode = factory.makeASTNode("MulNode");
      multiplicationNode.addChild(leftFactorNode).addChild(rightFactorNode);
      leftFactorNode = term3Prime(multiplicationNode);
      break;
    case O_MOD:
      jj_consume_token(O_MOD);
      rightFactorNode = factor();
      ASTNode modNode = factory.makeASTNode("ModNode");
      modNode.addChild(leftFactorNode).addChild(rightFactorNode);
      leftFactorNode = term3Prime(modNode);
      break;
    default:
      jj_la1[27] = jj_gen;

    }
    {if (true) return leftFactorNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode factor() throws ParseException {
  ASTNode factorNode = factory.makeASTNode("FactorNode");
  Token id;
  Token constant;
  ASTNode constantNode = null;
  ASTNode expressionNode = null;
  ASTNode secondFactorNode = null;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_IDENTIFIER:
      id = jj_consume_token(O_IDENTIFIER);
      ASTNode idReference = factory.makeASTNode("IdRefNode");
      idReference.addLabel(id.image);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case O_LBRACKET:
      case O_LPAREN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case O_LBRACKET:
          jj_consume_token(O_LBRACKET);
          expr();
          jj_consume_token(O_RBRACKET);
          break;
        case O_LPAREN:
          jj_consume_token(O_LPAREN);
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case O_NOT:
          case O_LPAREN:
          case O_CHAR:
          case O_IDENTIFIER:
          case O_FLOATCON:
          case O_INT:
            expr_list();
            break;
          default:
            jj_la1[28] = jj_gen;
            ;
          }
          jj_consume_token(O_RPAREN);
          break;
        default:
          jj_la1[29] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[30] = jj_gen;
        ;
      }
      factorNode.addChild(idReference);
      break;
    case O_INT:
      constant = jj_consume_token(O_INT);
      constantNode = factory.makeASTNode("ConstantNode").addLabel(constant.image);
      factorNode.addChild(constantNode);
      break;
    case O_FLOATCON:
      constant = jj_consume_token(O_FLOATCON);
      constantNode = factory.makeASTNode("ConstantNode").addLabel(constant.image);
      factorNode.addChild(constantNode);
      break;
    case O_CHAR:
      constant = jj_consume_token(O_CHAR);
      constantNode = factory.makeASTNode("ConstantNode").addLabel(constant.image);
      factorNode.addChild(constantNode);
      break;
    case O_LPAREN:
      jj_consume_token(O_LPAREN);
      expressionNode = expr();
      jj_consume_token(O_RPAREN);
    ASTNode leftParen = factory.makeASTNode("ParenNode").addLabel("(");
    ASTNode rightParen = factory.makeASTNode("ParenNode").addLabel(")");
    factorNode.addChild(leftParen).addChild(expressionNode).addChild(rightParen);
      break;
    case O_NOT:
      jj_consume_token(O_NOT);
      secondFactorNode = factor();
    ASTNode not = factory.makeASTNode("NotNode").addLabel("NOT");
    factorNode.addChild(not).addChild(secondFactorNode);
      break;
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    {if (true) return factorNode;}
    throw new Error("Missing return statement in function");
  }

  static final public ASTNode variable() throws ParseException {
  ASTNode idDefinitionNode = factory.makeASTNode("IdDefNode");
  Token id;
    id = jj_consume_token(O_IDENTIFIER);
    idDefinitionNode.addLabel(id.image);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case O_LBRACKET:
      jj_consume_token(O_LBRACKET);
      expr();
      jj_consume_token(O_RBRACKET);
      break;
    default:
      jj_la1[32] = jj_gen;
      ;
    }
    {if (true) return idDefinitionNode;}
    throw new Error("Missing return statement in function");
  }

  static final public void string() throws ParseException {
    jj_consume_token(O_STRING);
  }

  static private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  static private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  static private boolean jj_3R_11() {
    if (jj_scan_token(O_LBRACKET)) return true;
    return false;
  }

  static private boolean jj_3_2() {
    if (jj_scan_token(O_ELSE)) return true;
    return false;
  }

  static private boolean jj_3_1() {
    if (jj_3R_9()) return true;
    return false;
  }

  static private boolean jj_3R_9() {
    if (jj_3R_10()) return true;
    if (jj_scan_token(O_ASSIGN)) return true;
    return false;
  }

  static private boolean jj_3R_10() {
    if (jj_scan_token(O_IDENTIFIER)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_11()) jj_scanpos = xsp;
    return false;
  }
